Fixed all linting issues in .proto
